3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Changed the way Python scripts are called. Now script don't share variables anymore.
 Fix a memory leak.
 plugins/cfpython/cfpython.c
Ryo 2005-12-28

Applied patch #1383359 (Fix death message) courtesy Anton Oussik
( https://sourceforge.net/tracker/index.php?func=detail&aid=1383359&group_id=13833&atid=313833 )
 server/attack.c
Ryo 2005-12-27

server/skills.c: In steal() do not give exp for stealing from pets since this
   can be exploited to gain exp over and over.
Andreas Kirschbaum 2005-12-23

server/c_party.c: fix crash with party obsolescence (->next on freed item). Added
 get_firstparty() to get firstparty private var needed for plugin.

-------
Added party information to plugin functions. Plugins can change player's party
 or marked item.
 New files:
  plugins/cfpython/include/cfpython_party.h cfpython_party_private.h
  plugins/cfpython/cfpython_party.c
 Modified files:
  include/sproto.h: add new functions prototypes.
  include/plugin.h: party-related defines
  plugins/common/include/plugin_common.h: new party functions.
  plugins/common/plugin_common.c: new party functions.
  plugins/cfpython/include/cfpython.h: add new include.
  plugins/cfpython/include/cfpython_object_private.h: marked item/party getter/setter.
  plugins/cfpython/cfpython.c: add GetParties to Crossfire module.
  plugins/cfpython/cfpython_object.c: MarkedItem setter, Party getter/setter.
  server/plugins.c: new callbacks for party, marked item setter.
Ryo 2005-12-17

server/attack.c: Make spells destroy objects again.
Andreas Kirschbaum 2005-12-15

Moved natural dragon skin resistances from "statistics" to "resistances".
 server/c_misc.c